welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: error: value i is not a member of Array[java.awt.Color]
      setCouleurBrosse(T.i)
                         ^